--- a/Vacation_Itinerary/Vacation_Itinerary_starter_code.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary_starter_code.ipynb
@@ -287,7 +287,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.13 ('PythonData')",
    "language": "python",
    "name": "python3"
   },
@@ -320,6 +320,11 @@
    "latex_user_defs": false,
    "report_style_numbering": false,
    "user_envs_cfg": false
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "bca96345a7f22c66cc2719fb9636a85b768ac8ff341f61afc63ea46e6bee51b9"
+   }
   }
  },
  "nbformat": 4,
