--- a/Weather_Database/Weather_Database_starter_code (1).ipynb
+++ b/Weather_Database/Weather_Database_starter_code (1).ipynb
@@ -1571,7 +1571,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.7.13 ('PythonData')",
    "language": "python",
    "name": "python3"
   },
@@ -1585,7 +1585,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.7.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "bca96345a7f22c66cc2719fb9636a85b768ac8ff341f61afc63ea46e6bee51b9"
+   }
   }
  },
  "nbformat": 4,
