--- a/Vacation_Itinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Itinerary/Vacation_Itinerary.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -96,80 +96,80 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Aksu</td>\n",
-       "      <td>CN</td>\n",
-       "      <td>82.42</td>\n",
-       "      <td>clear sky</td>\n",
-       "      <td>41.12</td>\n",
-       "      <td>80.26</td>\n",
-       "      <td>Pudong Holiday Hotel</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Geraldton</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>70.21</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>-28.7667</td>\n",
+       "      <td>114.6000</td>\n",
+       "      <td>Broadwater Mariner Resort</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Touros</td>\n",
-       "      <td>BR</td>\n",
-       "      <td>80.60</td>\n",
-       "      <td>broken clouds</td>\n",
-       "      <td>-5.20</td>\n",
-       "      <td>-35.46</td>\n",
-       "      <td>INN NEW HORIZON</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Georgetown</td>\n",
+       "      <td>MY</td>\n",
+       "      <td>87.73</td>\n",
+       "      <td>few clouds</td>\n",
+       "      <td>5.4112</td>\n",
+       "      <td>100.3354</td>\n",
+       "      <td>Cititel Penang</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Morehead</td>\n",
+       "      <td>18</td>\n",
+       "      <td>Kapaa</td>\n",
        "      <td>US</td>\n",
-       "      <td>75.20</td>\n",
-       "      <td>clear sky</td>\n",
-       "      <td>37.27</td>\n",
-       "      <td>-87.18</td>\n",
-       "      <td>CCI Express Inn</td>\n",
+       "      <td>74.10</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>22.0752</td>\n",
+       "      <td>-159.3190</td>\n",
+       "      <td>Sheraton Kauai Coconut Beach Resort</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Port Elizabeth</td>\n",
-       "      <td>ZA</td>\n",
-       "      <td>84.20</td>\n",
-       "      <td>clear sky</td>\n",
-       "      <td>-33.92</td>\n",
-       "      <td>25.57</td>\n",
-       "      <td>39 On Nile Guest House</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Buala</td>\n",
+       "      <td>SB</td>\n",
+       "      <td>83.03</td>\n",
+       "      <td>light rain</td>\n",
+       "      <td>-8.1450</td>\n",
+       "      <td>159.5921</td>\n",
+       "      <td>Maringe Lagoon Lodge</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>16</td>\n",
-       "      <td>Northam</td>\n",
-       "      <td>GB</td>\n",
-       "      <td>82.40</td>\n",
-       "      <td>few clouds</td>\n",
-       "      <td>51.03</td>\n",
-       "      <td>-4.22</td>\n",
-       "      <td>Durrant House Hotel</td>\n",
+       "      <td>21</td>\n",
+       "      <td>Thayetmyo</td>\n",
+       "      <td>MM</td>\n",
+       "      <td>88.83</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>19.3167</td>\n",
+       "      <td>95.1833</td>\n",
+       "      <td>Htarwaya Thitsar Guest House</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   City_ID            City Country  Max Temp Current Description    Lat  \\\n",
-       "0        2            Aksu      CN     82.42           clear sky  41.12   \n",
-       "1        7          Touros      BR     80.60       broken clouds  -5.20   \n",
-       "2       10        Morehead      US     75.20           clear sky  37.27   \n",
-       "3       11  Port Elizabeth      ZA     84.20           clear sky -33.92   \n",
-       "4       16         Northam      GB     82.40          few clouds  51.03   \n",
+       "   City_ID        City Country  Max Temp Current Description      Lat  \\\n",
+       "0        1   Geraldton      AU     70.21     overcast clouds -28.7667   \n",
+       "1       11  Georgetown      MY     87.73          few clouds   5.4112   \n",
+       "2       18       Kapaa      US     74.10     overcast clouds  22.0752   \n",
+       "3       20       Buala      SB     83.03          light rain  -8.1450   \n",
+       "4       21   Thayetmyo      MM     88.83           clear sky  19.3167   \n",
        "\n",
-       "     Lng              Hotel Name  \n",
-       "0  80.26    Pudong Holiday Hotel  \n",
-       "1 -35.46         INN NEW HORIZON  \n",
-       "2 -87.18         CCI Express Inn  \n",
-       "3  25.57  39 On Nile Guest House  \n",
-       "4  -4.22     Durrant House Hotel  "
+       "        Lng                           Hotel Name  \n",
+       "0  114.6000            Broadwater Mariner Resort  \n",
+       "1  100.3354                       Cititel Penang  \n",
+       "2 -159.3190  Sheraton Kauai Coconut Beach Resort  \n",
+       "3  159.5921                 Maringe Lagoon Lodge  \n",
+       "4   95.1833         Htarwaya Thitsar Guest House  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,13 +234,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e6a772a9e184d6983615b4f89997440",
+       "model_id": "8943161f88e44a399d9f398469cdff4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,17 +271,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create DataFrames for each city by filtering the 'vacation_df' using the loc method. \n",
     "# The starting and ending city should be the same city.\n",
-    "vacation_start = vacation_df.loc[vacation_df[\"City\"] == \"Japura\"]\n",
-    "vacation_end = vacation_df.loc[vacation_df[\"City\"] == \"Japura\"]\n",
-    "vacation_stop1 = vacation_df.loc[vacation_df[\"City\"] == \"Padang\"]\n",
-    "vacation_stop2 = vacation_df.loc[vacation_df[\"City\"] == \"Bengkulu\"] \n",
-    "vacation_stop3 = vacation_df.loc[vacation_df[\"City\"] == \"Simpang\"]"
+    "vacation_start = vacation_df.loc[vacation_df[\"City\"] == \"Acapulco\"]\n",
+    "vacation_end = vacation_df.loc[vacation_df[\"City\"] == \"Acapulco\"]\n",
+    "vacation_stop1 = vacation_df.loc[vacation_df[\"City\"] == \"Tecoanapa\"]\n",
+    "vacation_stop2 = vacation_df.loc[vacation_df[\"City\"] == \"Xochistlahuaca\"] \n",
+    "vacation_stop3 = vacation_df.loc[vacation_df[\"City\"] == \"Pochutla\"]"
    ]
   },
   {
@@ -293,16 +293,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
-    "start = vacation_start[\"Lat\"].to_numpy()[0], vacation_start[\"Lng\"].to_numpy()[0]\n",
-    "end = vacation_end[\"Lat\"].to_numpy()[0], vacation_end[\"Lng\"].to_numpy()[0]\n",
-    "stop1 = vacation_stop1[\"Lat\"].to_numpy()[0], vacation_stop1[\"Lng\"].to_numpy()[0]\n",
-    "stop2 = vacation_stop2[\"Lat\"].to_numpy()[0], vacation_stop2[\"Lng\"].to_numpy()[0]\n",
-    "stop3 = vacation_stop3[\"Lat\"].to_numpy()[0], vacation_stop3[\"Lng\"].to_numpy()[0]"
+    "start = (vacation_start['Lat'].to_numpy()[0], vacation_start['Lng'].to_numpy()[0])\n",
+    "end = (vacation_end['Lat'].to_numpy()[0], vacation_end['Lng'].to_numpy()[0])\n",
+    "stop1 = (vacation_stop1['Lat'].to_numpy()[0], vacation_stop1['Lng'].to_numpy()[0])\n",
+    "stop2 = (vacation_stop2['Lat'].to_numpy()[0], vacation_stop2['Lng'].to_numpy()[0])\n",
+    "stop3 = (vacation_stop3['Lat'].to_numpy()[0], vacation_stop3['Lng'].to_numpy()[0])"
    ]
   },
   {
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {
     "tags": []
    },
@@ -322,7 +322,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ee51357dfef482dac6e4499bc8af040",
+       "model_id": "faf8431c4b3f4a7d8f8eaf428ab3cf43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -395,67 +395,67 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>543</td>\n",
-       "      <td>Japura</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>76.55</td>\n",
-       "      <td>light rain</td>\n",
-       "      <td>-0.32</td>\n",
-       "      <td>102.35</td>\n",
-       "      <td>KOST dan HOMESTAY RUMAH KITA JOSH</td>\n",
+       "      <td>281</td>\n",
+       "      <td>Acapulco</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>78.10</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>16.8634</td>\n",
+       "      <td>-99.8901</td>\n",
+       "      <td>HS Hotsson Smart Acapulco</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>412</td>\n",
-       "      <td>Padang</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>79.16</td>\n",
-       "      <td>scattered clouds</td>\n",
-       "      <td>-0.95</td>\n",
-       "      <td>100.35</td>\n",
-       "      <td>Mercure Padang</td>\n",
+       "      <td>191</td>\n",
+       "      <td>Tecoanapa</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>76.42</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>16.5167</td>\n",
+       "      <td>-98.7500</td>\n",
+       "      <td>Hotel Manglares</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>197</td>\n",
-       "      <td>Bengkulu</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>78.84</td>\n",
-       "      <td>overcast clouds</td>\n",
-       "      <td>-3.80</td>\n",
-       "      <td>102.27</td>\n",
-       "      <td>Grage Hotel Bengkulu</td>\n",
+       "      <td>327</td>\n",
+       "      <td>Xochistlahuaca</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>71.58</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>16.7833</td>\n",
+       "      <td>-98.2500</td>\n",
+       "      <td>La frontera</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>417</td>\n",
-       "      <td>Simpang</td>\n",
-       "      <td>ID</td>\n",
-       "      <td>76.37</td>\n",
-       "      <td>clear sky</td>\n",
-       "      <td>-1.27</td>\n",
-       "      <td>104.08</td>\n",
-       "      <td>Sk 7 rt 1 dusun 3 rantau makmur berbak</td>\n",
+       "      <td>333</td>\n",
+       "      <td>Pochutla</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>74.82</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>15.7432</td>\n",
+       "      <td>-96.4661</td>\n",
+       "      <td>Hotel Posada San Jose</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   City_ID      City Country  Max Temp Current Description   Lat     Lng  \\\n",
-       "0      543    Japura      ID     76.55          light rain -0.32  102.35   \n",
-       "1      412    Padang      ID     79.16    scattered clouds -0.95  100.35   \n",
-       "2      197  Bengkulu      ID     78.84     overcast clouds -3.80  102.27   \n",
-       "3      417   Simpang      ID     76.37           clear sky -1.27  104.08   \n",
+       "   City_ID            City Country  Max Temp Current Description      Lat  \\\n",
+       "0      281        Acapulco      MX     78.10    scattered clouds  16.8634   \n",
+       "1      191       Tecoanapa      MX     76.42       broken clouds  16.5167   \n",
+       "2      327  Xochistlahuaca      MX     71.58       broken clouds  16.7833   \n",
+       "3      333        Pochutla      MX     74.82     overcast clouds  15.7432   \n",
        "\n",
-       "                               Hotel Name  \n",
-       "0       KOST dan HOMESTAY RUMAH KITA JOSH  \n",
-       "1                          Mercure Padang  \n",
-       "2                    Grage Hotel Bengkulu  \n",
-       "3  Sk 7 rt 1 dusun 3 rantau makmur berbak  "
+       "       Lng                 Hotel Name  \n",
+       "0 -99.8901  HS Hotsson Smart Acapulco  \n",
+       "1 -98.7500            Hotel Manglares  \n",
+       "2 -98.2500                La frontera  \n",
+       "3 -96.4661      Hotel Posada San Jose  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,13 +508,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0da5684916a94e5fa70417e072940ee6",
+       "model_id": "49c4580bfa2c44ada4810a4ffa86e5fe",
        "version_major": 2,
        "version_minor": 0
       },
